k8s-NAC/validating-admission-policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: require-myapp-latest-in-myapp
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["pods"]
    namespaceSelector:
      matchLabels:
        kubernetes.io/metadata.name: myapp
  validations:
    - expression: 'object.spec.containers.all(c, c.image == "myapp:latest") && (!has(object.spec.initContainers) || object.spec.initContainers.all(c, c.image == "myapp:latest"))'
      message: "All containers in namespace 'myapp' must use image myapp:latest"

---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: require-myapp-latest-in-myapp-binding
spec:
  policyName: require-myapp-latest-in-myapp
  validationActions: ["Deny"]
